# NavDDDMR

./: .gitignore  launch.sh  launch_sim.sh
dddmr_docker/docker_file/bash/: install_firefox.bash
src/dddmr_beginner_guide/: Explanation.md
src/dddmr_beginner_guide/bag_convert/: CMakeLists.txt  package.xml
src/dddmr_beginner_guide/bag_convert/launch/: convert_livox_bag.launch.py
src/dddmr_beginner_guide/bag_convert/src/: bag_converter.cpp
src/dddmr_global_planner/config/: path_planning_on_no_entry_layer.yaml
src/dddmr_global_planner/src/: global_planner.cpp
src/dddmr_lego_loam/: README.md
src/dddmr_lego_loam/lego_loam_bor/: CMakeLists.txt  package.xml
src/dddmr_lego_loam/lego_loam_bor/config/: loam_bag_airy_config.yaml  loam_bag_c16_config.yaml  loam_bag_go2_config.yaml  loam_bag_lidar2depthimg_config.yaml  loam_bag_mid360_config.yaml  loam_bag_yolo_config.yaml  loam_c16_config.yaml  loam_mid360_config.yaml  mcl_c16_config.yaml
src/dddmr_lego_loam/lego_loam_bor/include/: featureAssociation.h  imageProjection.h  mapOptimization.h  utility.h  yoloImageProjection.h
src/dddmr_lego_loam/lego_loam_bor/launch/: lego_loam_bag.launch.xml  lego_loam_bag_airy.launch  lego_loam_bag_lidar2depthimg.launch  lego_loam_bag_mid360.launch  lego_loam_bag_yolo.launch  lego_loam_with_lio_odom.launch.py
src/dddmr_lego_loam/lego_loam_bor/rviz/: lego_loam_airy.rviz
src/dddmr_lego_loam/lego_loam_bor/src/: featureAssociation.cpp  imageProjection.cpp  lego_loam_bag_node.cpp  mapOptimization.cpp  yoloImageProjection.cpp
src/dddmr_lego_loam/lego_loam_bor/src/yolo/: yoloImageProjection.cpp
src/dddmr_lego_loam/lio_loam/: CMakeLists.txt
src/dddmr_lego_loam/lio_loam/config/: lio_loam_mid360_config.yaml
src/dddmr_lego_loam/lio_loam/include/: simpleMapping.h  utility.h
src/dddmr_lego_loam/lio_loam/launch/: lio_loam.launch.py
src/dddmr_lego_loam/lio_loam/rviz/: livox.rviz
src/dddmr_lego_loam/lio_loam/src/: lio_loam_node.cpp  simpleMapping.cpp
src/dddmr_local_planner/local_planner/launch/: local_planner_play_ground.launch
src/dddmr_local_planner/local_planner/src/: local_planner.cpp
src/dddmr_mcl_3dl/config/: mcl_3dl.yaml
src/dddmr_odom_3d/: CMakeLists.txt
src/dddmr_odom_3d/include/: odom_3d.h
src/dddmr_odom_3d/launch/: example_odom_3d_launch.py
src/dddmr_odom_3d/src/: odom_3d.cpp
src/dddmr_p2p_move_base/config/: go2_localization.yaml  go2_mapping.yaml  go2w.yaml  localization.yaml  mapping.yaml  p2p_move_base_localization.yaml
src/dddmr_p2p_move_base/launch/: go2_mapping.launch  mid360_map_nav.launch.py  move_base_localization_mode.launch.py  move_base_mapping_mode.launch.py
src/dddmr_p2p_move_base/rviz/: move_base_mapping.rviz  p2p_move_base_localization.rviz
src/dddmr_perception_3d/config/: perception_3d_ros.yaml
src/dddmr_perception_3d/launch/multilayer_spinning_lidar_demo/: scanning_lidar_3d_ros_launch.py
src/dddmr_perception_3d/plugins/: multilayer_spinning_lidar.cpp
src/dddmr_semantic_segmentation/: CMakeLists.txt
src/dddmr_trt/src/yolo/yolo_trt/: yolov8.cpp
src/lio_loam/: package.xml
src/lio_loam/launch/: lio_loam.launch.py
src/lio_loam/rviz/: livox.rviz
src/lio_nav_bridge/: CMakeLists.txt  package.xml
src/lio_nav_bridge/config/: lio_loam_mid360_config.yaml  mid360_pitch23.yaml  mid360_pitch30.yaml  nav_map_mid360.yaml
src/lio_nav_bridge/include/: simpleMapping.h  simple_mapping.h  sub_maps.h  transforms.hpp  utility.h
src/lio_nav_bridge/launch/: lio_nav_bridge.launch.py  lio_nav_bridge_bag.launch.py  lio_nav_bridge_sim.launch.py
src/lio_nav_bridge/rviz/: livox.rviz
src/lio_nav_bridge/src/: lio_nav_bridge_node.cpp  simpleMapping.cpp  simple_mapping.cpp  sub_maps.cpp
