<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lio_loam</name>
  <version>1.0.0</version>
  <description>Simplified LIO-LOAM package</description>

  <maintainer email="463422727@qq.com">Apola</maintainer>

  <license>BSD</license>

  <author>xyyandhtl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>libpcl-all</depend>
  <depend>pcl_conversions</depend>
  <depend>cloud_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>dddmr_trt</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
