<?xml version="1.0"?>
<package format="3">
  <name>bag_converter</name>
  <version>1.0.0</version>
  <description>
    Offline ROS2 bag converter: Livox CustomMsg to PointCloud2,
    passthrough for all other topics.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
